OrderService/Kubernetes/api/apiordergoodfood-develop-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: apiordergoodfood-develop
  name: apiordergoodfood-develop
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
    - name: "https"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: apiordergoodfood-develop
status:
  loadBalancer: {}
